@@ -6,6 +6,7 @@ import java.awt.geom.Point2D;
 import java.util.HashMap;
 
 import edu.colorado.phet.common.games.GameSettings;
+import edu.colorado.phet.common.games.GameTimer;
 import edu.colorado.phet.common.phetcommon.math.vector.Vector2D;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
