@@ -1,3 +1,4 @@
+8/28/12 migrate GameTimer to common.games, use in RPAL and BCE
 8/28/12 generalizations and doc for GameTimer
 8/28/12 minor tweaks in RewardNode
 8/28/12 introduce generics in linegame package
