@@ -1,3 +1,4 @@
+8/29/12 replace local copy of GameTimer with common.games.GameTimer
 # 1.01.00 (66652) Aug 7, 2012
 # 1.00.09 (66628) Aug 7, 2012
 > Fixed a problem that prevented audio from playing under Java 7
